--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,7 @@
   <!-- Compiled and minified CSS for materialize-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="/styles/stores.css">
   {{!-- <link rel="stylesheet" href="/styles/signup.css"> --}}
   {{!-- <link rel="stylesheet" href="/styles/login.css"> --}}
 </head>
@@ -22,58 +23,20 @@
 <body>
 
   <!-- navbar -->
-  <nav class="black">
-    <div class="nav-wrapper">
-      <a href="/" class="brand-logo red-text">wish<b>List</b></a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="/">Home</a></li>
-        <li><a href="/login">Login</a></li>
-        <li><a href="/signup">Sign up!</a></li>
-        <li><a href="/fulllist">Wishlist</a></li>
-      </ul>
-    </div>
-  </nav>
-  <!-- // navbar -->
-
-  <!-- main content -->
-
   {{{body}}}
-
-  <!-- // main content -->
-
-  <!-- footer -->
-  <footer class="page-footer black">
-    <div class="container">
-      <div class="row">
-        <div class="col l4 s12">
-          <h5 class="red-text">wish<b>List</b></h5>
-        </div>
-        <div class="col l6 offset-l2 s12">
-          <div class="social-media-icons">
-            <i class="fab fa-facebook-square medium"></i>
-            <i class="fab fa-instagram medium"></i>
-            <i class="fab fa-twitter medium"></i>
-            <i class="fab fa-pinterest medium"></i>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
   <!-- // footer -->
-
+  {{!-- jquery --}}
+   <script src="https://code.jquery.com/jquery.js"></script>
+  <!-- scripts -->
   <script src="https://kit.fontawesome.com/fe613f4734.js"></script>
-  <!-- JQuery Link -->
-      <script src="https://code.jquery.com/jquery.js"></script>
   <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <!-- // scripts -->
+  <script src="/js/stores.js"></script>
+  <script src="/js/products.js"></script>
+  <script src="/js/wishlist.js"></script>
+  <script src="/js/auth.js"></script>
 
-    <script src="/js/index.js"></script>
-      <script src="/js/auth.js"></script>
-    <script>
-       $(document).ready(function(){
-    $('.modal').modal();
-  });
-    </script>
 </body>
 
 </html>
